fix(gtk320: toolbar): fix fg color for inline headerbar buttons

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -195,6 +195,15 @@
             &:backdrop {
                 color: $titlebar_fg_unfocused;
             }
+
+            stack box.narrow {
+                /* have no clue why it's ignored by gtk and forced to 5px and 7px */
+                padding: 0;
+            }
+
+            &:not(:checked):not(:hover) stack box {
+                color: $menubar_fg_color;
+            }
         }
 
         button.titlebutton + separator.titlebutton {
