refactor(gtk3*): don't use scss compound selectors
ref: https://github.com/nana-4/materia-theme/issues/407

--- a/src/gtk-3.0/scss/widgets/_actionbar.scss
+++ b/src/gtk-3.0/scss/widgets/_actionbar.scss
@@ -82,7 +82,7 @@
             .button {
                 @include button($selected_bg_color, $selected_fg_color);
 
-                &.suggested-action { @extend .suggested-action.button; }
+                &.suggested-action { @extend .suggested-action, .button; }
             }
 
             .selection-menu.button {
