--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -70,6 +70,13 @@ $button_sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 
         box-shadow: none;
     }
 
+    %linked_middle-rtl {
+            border-radius: 0;
+            -gtk-outline-radius: 0;
+            //border-right-style: none;
+            //border-left-style: solid;
+    }
+
     %linked_middle {
         border-radius: 0;
         -gtk-outline-radius: 0;
@@ -77,10 +84,7 @@ $button_sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 
         //border-right-style: solid;
 
         &:dir(rtl) {
-            border-radius: 0; // needed when including %linked_middle:dir(rtl)
-            -gtk-outline-radius: 0;
-            //border-right-style: none;
-            //border-left-style: solid;
+            @exntend %linked_middle-rtl;
         }
     }
 
@@ -98,15 +102,7 @@ $button_sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 
         }
     }
 
-    %linked_button {
-        border-width: $button_border_width;
-        //border-style: solid;
-        border-radius: 0;
-        -gtk-outline-radius: 0;
-        //border-right-style: none;
-        //border-left-style: none;
-
-        &:first-child {
+    %linked_button-first-child {
             border-width: $button_border_width;
             //border-left-style: solid;
             //border-right-style: none;
@@ -118,9 +114,9 @@ $button_sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 
                 //border-left-style: none;
                 //border-right-style: solid;
             }
-        }
+    }
 
-        &:last-child {
+    %linked_button-last-child {
             border-width: $button_border_width;
             //border-left-style: none;
             //border-right-style: solid;
@@ -131,28 +127,37 @@ $button_sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 
                 //border-left-style: solid;
                 //border-right-style: none;
             }
-        }
+    }
 
-        &:only-child {
+    %linked_button-only-child {
             border-width: $button_border_width;
             border-style: solid;
+            border-radius: $roundness;
+            -gtk-outline-radius: $button_outline_radius;
+    }
+
+    %linked_button {
+        border-width: $button_border_width;
+        //border-style: solid;
+        border-radius: 0;
+        -gtk-outline-radius: 0;
+        //border-right-style: none;
+        //border-left-style: none;
+
+        &:first-child {
+            @extend %linked_button-first-child;
+        }
+
+        &:last-child {
+            @extend %linked_button-last-child;
         }
 
         &:only-child {
-            border-radius: $roundness;
-            -gtk-outline-radius: $button_outline_radius;
+            @extend %linked_button-only-child;
         }
     }
 
-    %linked_vertical_button {
-        border-width: $button_border_width;
-        border-style: solid;
-        border-radius: 0;
-        -gtk-outline-radius: 0;
-        //border-top-style: none;
-        //border-bottom-style: none;
-
-        &:first-child {
+    %linked_vertical_button-first-child {
             border-width: $button_border_width;
             //border-top-style: solid;
             //border-bottom-style: none;
@@ -164,9 +169,9 @@ $button_sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 
                 //border-top-style: none;
                 //border-bottom-style: solid;
             //}
-        }
+    }
 
-        &:last-child {
+    %linked_vertical_button-last-child {
             border-width: $button_border_width;
             //border-top-style: none;
             //border-bottom-style: solid;
@@ -178,16 +183,33 @@ $button_sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 
                 //border-top-style: solid;
                 //border-bottom-style: none;
             //}
-        }
+    }
 
-        &:only-child, &:first-child:only-child {
+    %linked_vertical_button-only-child {
             border-width: $button_border_width;
             //border-style: solid;
+            border-radius: $roundness;
+            -gtk-outline-radius: $button_outline_radius;
+    }
+
+    %linked_vertical_button {
+        border-width: $button_border_width;
+        border-style: solid;
+        border-radius: 0;
+        -gtk-outline-radius: 0;
+        //border-top-style: none;
+        //border-bottom-style: none;
+
+        &:first-child {
+            @extend %linked_vertical_button-first-child;
+        }
+
+        &:last-child {
+            @extend %linked_vertical_button-last-child;
         }
 
         &:only-child {
-            border-radius: $roundness;
-            -gtk-outline-radius: $button_outline_radius;
+            @extend %linked_vertical_button-only-child;
         }
     }
 }
@@ -703,22 +725,22 @@ $button_sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 
             // https://bugzilla.gnome.org/show_bug.cgi?id=733979
             &:dir(ltr) { @extend %linked_middle; }
             // specificity bump
-            &:dir(rtl) { @extend %linked_middle:dir(rtl); }
+            &:dir(rtl) { @extend %linked_middle-rtl; }
         }
 
-        .linked:not(.vertical) > &:first-child > box > button.combo { @extend %linked_button:first-child; }
+        .linked:not(.vertical) > &:first-child > box > button.combo { @extend %linked_button-first-child; }
 
-        .linked:not(.vertical) > &:last-child > box > button.combo { @extend %linked_button:last-child; }
+        .linked:not(.vertical) > &:last-child > box > button.combo { @extend %linked_button-last-child; }
 
-        .linked:not(.vertical) > &:only-child > box > button.combo { @extend %linked_button:only-child; }
+        .linked:not(.vertical) > &:only-child > box > button.combo { @extend %linked_button-only-child; }
 
         .linked.vertical > & > box > button.combo { @extend %linked_vertical_middle; }
 
-        .linked.vertical > &:first-child > box > button.combo { @extend %linked_vertical_button:first-child; }
+        .linked.vertical > &:first-child > box > button.combo { @extend %linked_vertical_button-first-child; }
 
-        .linked.vertical > &:last-child > box > button.combo { @extend %linked_vertical_button:last-child; }
+        .linked.vertical > &:last-child > box > button.combo { @extend %linked_vertical_button-last-child; }
 
-        .linked.vertical > &:only-child > box > button.combo { @extend %linked_vertical_button:only-child; }
+        .linked.vertical > &:only-child > box > button.combo { @extend %linked_vertical_button-only-child; }
 
         menu menuitem {
             padding: $spacing (if($spacing > 1px, $spacing, 1px) * 2 - 1px);
