style(gtk320): scss-lint

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -80,9 +80,11 @@
 
     toolbutton,
     toolbutton:backdrop {
-        & > button.flat {
+        > button.flat {
             @extend %linked_button;
+
             &:dir(ltr) { @extend %linked_middle; }
+
             &:dir(rtl) { @extend %linked_middle-rtl; }
         }
 
