hotfix(gtk320): small typo which makes theme unreadable for some apps

--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -84,7 +84,7 @@ $button_sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 
         //border-right-style: solid;
 
         &:dir(rtl) {
-            @exntend %linked_middle-rtl;
+            @extend %linked_middle-rtl;
         }
     }
 
