feat(gtk320: views): style separator properly in a more common way

--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -366,6 +366,10 @@
         border: 1px solid border_normal(mix($base_color, $bg_color, .78));
     }
 
+    viewport separator {
+        background-image: image(mix($text_color, $base_color, .9));
+    }
+
 }
 
 
