fix(gtk320: popover: item): use bigger of possible paddings instead of adding them

--- a/src/gtk-3.20/scss/widgets/_menu.scss
+++ b/src/gtk-3.20/scss/widgets/_menu.scss
@@ -312,7 +312,7 @@ $menu_borders_color: mix(
         @extend %undecorated_button;
 
         padding: $spacing;
-        padding-left: $spacing + $roundness;
+        padding-left: max($spacing, $roundness);
         transition: none;
 
         &:hover {
