refactor(gtk320: toolbar): use border_tng

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -7,7 +7,7 @@
 
 @mixin toolbar($bg, $fg) {
     @include linear-gradient($bg);
-    @include border($bg);
+    @include border_tng($fg, $bg, .8);
 
     color: $fg;
 
