--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -543,7 +543,7 @@ $button_sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 
 
             &:disabled { color: mix($button_fg_color, $bg_color, .7); }
 
-            &:backdrop { color: mix($backdrop_base_color, $backdrop_fg_color, .9); }
+            &:backdrop { color: mix($button_fg_color, $backdrop_fg_color, .8); }
 
             &:backdrop:disabled { color: alpha($backdrop_insensitive_color, .8); }
         }
