--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -90,11 +90,10 @@
         }
 
         &:backdrop {
-            border-color: $backdrop_bg_color;
-            border-style: none solid solid none;
-            color: mix($backdrop_fg_color, $backdrop_bg_color, .5);
+            //border-color: mix($backdrop_borders_color, $button_border, .5);
+            color: mix($button_fg_color, $backdrop_fg_color, .5);
             background-image: none;
-            background-color: $backdrop_base_color;
+            background-color: mix($button_bg_color, $backdrop_bg_color, .5);
 
             &:disabled {
                 border-color: $backdrop_bg_color;
