fix(gtk320: toolbar: titlebar: backdrop): fix titlebar border color in backdrop-supported environments (tested on Weston)

--- a/src/gtk-3.20/scss/widgets/_toolbar.scss
+++ b/src/gtk-3.20/scss/widgets/_toolbar.scss
@@ -149,6 +149,7 @@
 
             color: $titlebar_fg_unfocused;
             text-shadow: none;
+            border-color: mix($backdrop_borders_color, $bg_color, .5);
         }
 
         &.default-decoration { // Default titlebar (old metacity)
