fix(gtk320: button: backdrop): fix button fg color in backdrop-supported environments (tested on Weston)

--- a/src/gtk-3.20/scss/widgets/_button.scss
+++ b/src/gtk-3.20/scss/widgets/_button.scss
@@ -454,6 +454,8 @@ $button_sidepadding: $spacing + ($roundness / 14px * if($spacing > 0, $spacing, 
                 color: alpha($selected_fg_color, .85);
             }
         }
+
+        &:backdrop { color: mix($button_fg_color, $backdrop_fg_color, .8); }
     }
 
     &.separator, .separator {
