fix(gtk320: view: separator): add workaround for styling viewport > menu > separator (discovered in geeqie img viewer)

--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -369,6 +369,12 @@
         background-image: image(mix($text_color, $base_color, .9));
     }
 
+    //fix weird GTK issue, where for elements `viewport > menu > separator`
+    //style `viewport separator` have higher priority than `menu separator`:
+    viewport menu separator {
+        background-image: image($menu_borders_color);
+    }
+
 }
 
 
